# VidaClientDemo

./: CMakeLists.txt  main.cpp
include/glad/: glad.h
include/qgt/: FontRenderer.h
src/: glad.c
